@@ -14,7 +14,7 @@ sub new
 		
 	$self->{appears} = [
 		{ 
-			place => "admin_actions", 
+			place => "admin_actions_system", 
 			position => 1260, 
 			action => "regen_abstracts",
 		},
