@@ -14,7 +14,7 @@ sub new
 		
 	$self->{appears} = [
 		{ 
-			place => "admin_actions", 
+			place => "admin_actions_config", 
 			position => 1250, 
 			action => "reload_config",
 		},
