@@ -8328,3 +8328,5 @@ EPRINTS-3.1-beta-2
 2009-06-15 tdb
  * Refactoured XML importing to embed the translation inside objects/fields
 
+2009-06-16 cjg
+ * Converted Admin screen into several tabs.
